#
# CMake file for pyvrui project
#

project(pyvrui)

cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules)

find_package(SWIG REQUIRED)
include(${SWIG_USE_FILE})

find_package(VruiOne REQUIRED)
find_package(PythonLibs)

include_directories(${PYTHON_INCLUDE_PATH} ${VRUIONE_INCLUDE_PATH})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)

set(CMAKE_SWIG_FLAGS "")

file(GLOB INTERFACE_FILES *.i)

#message(STATUS " -- INTERFACE_FILES=${INTERFACE_FILES}")

set_source_files_properties(${INTERFACE_FILES} PROPERTIES CPLUSPLUS ON)

swig_add_module(${PROJECT_NAME} python ${PROJECT_NAME}.i)
swig_link_libraries(${PROJECT_NAME} ${PYTHON_LIBRARIES} ${VRUIONE_LIBRARIES})

set(CMAKE_INSTALL_PREFIX "/usr")

file(GLOB SHARED_LIBRARIES ${CMAKE_BINARY_DIR}/*.so)
file(GLOB PYTHON_FILES ${CMAKE_BINARY_DIR}/*.py)

install(FILES ${SHARED_LIBRARIES} ${PYTHON_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/python2.6/dist-packages)

set(CPACK_PACKAGE_NAME ${PROJECT_NAME})

set(PYVRUI_MAJOR_VERSION 0)
set(PYVRUI_MINOR_VERSION 1)
set(PYVRUI_PATCH_VERSION 0)

set(CPACK_PACKAGE_VERSION_MAJOR ${PYVRUI_MAJOR_VERSION})
set(CPACK_PACKAGE_VERSION_MINOR ${PYVRUI_MINOR_VERSION})
set(CPACK_PACKAGE_VERSION_PATCH ${PYVRUI_PATCH_VERSION})

set(CPACK_PACKAGE_VENDOR "keckcaves.org")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Python interface for VRUI library")

set(CPACK_GENERATOR DEB)

if (CMAKE_SIZEOF_VOID_P EQUAL 4)
   set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE i386)
else()
   set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE amd64)
endif()

set(CPACK_DEBIAN_PACKAGE_DEPENDS "python-opengl")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER jvan@cse.ucdavis.edu)

set(CPACK_SET_DESTDIR ON)

include(CPack)
message(STATUS "CPack enabled for packaging")
